# poster-generator

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Poster.vue  README.md  UYGHUR_SUPPORT.md  crate_intro_poster.json  example_config.json  ligature_test.json  ligature_test_specific.json  simple_uyghur_test.json  ukij_test.json  uyghur_example.json  uyghur_with_font.json
examples/: basic.rs  rtl_text.rs
src/: lib.rs  main.rs
