[package]
name = "poster_generator"
version = "0.1.0"
edition = "2021"
default-run = "poster_generator"

[dependencies]
skia-safe = { version = "0.87.0", features = ["textlayout"] }
base64 = "0.21.4"
image = "0.24.7"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
chrono = "0.4.31"
