[package]
name = "poster_generator"
version = "0.1.2"
edition = "2024"
default-run = "poster_generator"
authors = ["Ruzaji Yasin <menzil@live.cn>"]
description = "A poster generation library based on Skia Safe with RTL text support for Arabic, Hebrew, Persian, and Uyghur"
license = "MIT"
repository = "https://github.com/menzil/poster-generator"
keywords = ["poster", "image", "generator", "skia", "rtl"]
categories = ["graphics", "multimedia::images", "rendering"]
readme = "README.md"
exclude = [
    "*.jpg",
    "*.png",
    "*.json",
    "*.ttf",
    ".DS_Store",
    "target/",
    ".git/",
    ".github/",
    "Poster.vue",
    "CLAUDE.md",
    "UYGHUR_SUPPORT.md",
]

[dependencies]
skia-safe = { version = "0.89.1", features = ["textlayout"] }
base64 = "0.21.4"
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"
